@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2008, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2009, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,10 +27,11 @@
  * ----------------------
  * ImageMapUtilities.java
  * ----------------------
- * (C) Copyright 2004-2008, by Richard Atkinson and Contributors.
+ * (C) Copyright 2004-2009, by Richard Atkinson and Contributors.
  *
  * Original Author:  Richard Atkinson;
  * Contributor(s):   David Gilbert (for Object Refinery Limited);
+ *                   Fawad Halim - bug 2690293;
  *
  * Changes
  * -------
@@ -42,6 +43,7 @@
  * 06-Feb-2006 : API doc updates (DG);
  * 04-Dec-2007 : Added htmlEscape() method, and escape 'name' in
  *               getImageMap() (DG);
+ * 19-Mar-2009 : Added javascriptEscape() method - see bug 2690293 by FH (DG);
  *
  */
 
@@ -71,8 +73,7 @@ public class ImageMapUtilities {
      * @throws java.io.IOException if there are any I/O errors.
      */
     public static void writeImageMap(PrintWriter writer, String name,
-                                     ChartRenderingInfo info)
-        throws IOException {
+            ChartRenderingInfo info) throws IOException {
 
         // defer argument checking...
         ImageMapUtilities.writeImageMap(writer, name, info,
@@ -93,10 +94,8 @@ public class ImageMapUtilities {
      * @throws java.io.IOException if there are any I/O errors.
      */
     public static void writeImageMap(PrintWriter writer,
-                                     String name,
-                                     ChartRenderingInfo info,
-                                     boolean useOverLibForToolTips)
-        throws IOException {
+            String name, ChartRenderingInfo info,
+            boolean useOverLibForToolTips) throws IOException {
 
         ToolTipTagFragmentGenerator toolTipTagFragmentGenerator = null;
         if (useOverLibForToolTips) {
@@ -239,5 +238,20 @@ public class ImageMapUtilities {
             }
         }
         return result.toString();
+    }
+
+    /**
+     * Returns a string that is equivalent to the input string, but with
+     * special characters converted to HTML escape sequences, and quotes
+     * escaped for use in javascript string literals
+     *
+     * @param input  the string to escape (<code>null</code> not permitted).
+     *
+     * @return A string with characters escaped.
+     *
+     * @since 1.0.13
+     */
+    public static String javascriptEscape(String input) {
+    	return htmlEscape(input.replaceAll("\'", "\\'"));
     }
 }
